--- a/demo.html
+++ b/demo.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Lanh - Create</h1>
-    <h1>Lanh - Demo</h1>
+    <h1>Lanh - Demo 1</h1>
+    <h1>Lanh - Demo 2</h1>
+
 </body>
 </html>
